# geometry-lib

./: .dockerignore  .gitignore  Dockerfile  README.md  demo.py  pyproject.toml
geometry/: __init__.py  shapes.py
geometry_lib.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_shapes.py
