[build-system]
requires = ['setuptools>=61.0','wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'geometry-lib'
version = '0.1.0'
description = 'Простая библиотека geometry'
authors = [{name = 'Hmts', email = 'you@example.com'}]
readme = 'README.md'
license = {text = 'MIT'}
requires-python = '>=3.8'
dependencies = []

[project.optional-dependencies]
dev = ['pytest']